--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -4,6 +4,11 @@
 
 @tailwind utilities;
 
+@font-face {
+  font-family:pokemon;
+  src: url(./fonts/Pokemon.ttf)format('truetype');
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
